--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -1,5 +1,3 @@
-<%@ page language="java" contentType="text/html; charset=utf-8" pageEncoding="utf-8"%>
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c"%>
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,7 +7,7 @@
     <nav>
         <ul>
             <li><a href="index.jsp">Home</a></li>
-            <li><a href="register.jsp">Register</a></li>
+            <li><a href="register.html">Register</a></li>
         </ul>
     </nav>
 
