--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -7,7 +7,7 @@
     <nav>
         <ul>
             <li><a href="index.jsp">Home</a></li>
-            <li><a href="register.html">Register</a></li>
+            <li><a href="register.jsp">Register</a></li>
         </ul>
     </nav>
 
